--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vscode-trace-server",
-  "displayName": "vscode-trace-server",
+  "displayName": "VsCode Trace Server",
   "description": "VsCode extension for executing a trace server",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.78.0"
   },
+  "publisher": "tracecompass-community",
   "categories": [
     "Other"
   ],
