--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,15 +8,7 @@
     "projectFolderIgnoreList": [] // ignorePatterns below-
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {
-    "@typescript-eslint/naming-convention": "warn",
-    "@typescript-eslint/semi": "warn",
-    "curly": "warn",
-    "eqeqeq": "warn",
-    "no-throw-literal": "warn",
-    "semi": "off"
-  },
-  "extends": ["plugin:@typescript-eslint/recommended"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "ignorePatterns": [
     "out",
     "dist",
