Sort .vscodeignore the same standard gitignore way
Keep its originally generated lines the same, only re-sorting them most.

Add the conventional first comment line, about how to LC_COLLATE=C sort.

Change-Id: Iec50b154dae15d8c97b4fd0d94aa593314d2350e
Signed-off-by: Marco Miller <marco.miller@ericsson.com>

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,12 +1,13 @@
-.vscode/**
-.vscode-test/**
-out/**
-node_modules/**
-src/**
-.gitignore
-.yarnrc
-webpack.config.js
-**/tsconfig.json
-**/.eslintrc.json
+# LC_COLLATE=C sort .vscodeignore
 **/*.map
 **/*.ts
+**/.eslintrc.json
+**/tsconfig.json
+.gitignore
+.vscode-test/**
+.vscode/**
+.yarnrc
+node_modules/**
+out/**
+src/**
+webpack.config.js
