--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "categories": [
     "Other"
   ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eclipse-cdt-cloud/vscode-trace-server.git"
+  },
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
