--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "activationEvents": [],
   "main": "./dist/extension.js",
+  "extensionKind": [
+    "workspace"
+  ],
   "contributes": {
     "commands": [
       {
