--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "vscode-trace-server.helloWorld",
-        "title": "Hello World"
+        "command": "vscode-trace-server.start",
+        "title": "Trace Server: (re)start"
+      },
+      {
+        "command": "vscode-trace-server.stop",
+        "title": "Trace Server: stop"
       }
     ]
   },
@@ -39,20 +43,23 @@
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
   },
+  "dependencies": {
+    "tree-kill": "^1.2.2"
+  },
   "devDependencies": {
-    "@types/vscode": "^1.78.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.0.4",
     "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
     "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2",
-    "@vscode/test-electron": "^2.3.0"
+    "webpack-cli": "^5.0.2"
   }
 }
