--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   // See http://go.microsoft.com/fwlink/?LinkId=827846
-  // for the documentation about the extensions.json format
+  // for the documentation about the extensions.json format.
+  // First generated from https://code.visualstudio.com/api/get-started/your-first-extension
   "recommendations": [
     "amodio.tsl-problem-matcher",
     "davidanson.vscode-markdownlint",
