--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 // Place your settings in this file to overwrite default and user settings.
+// Kept as generated from https://code.visualstudio.com/api/get-started/your-first-extension
 {
   "files.exclude": {
     "out": false, // set this to true to hide the "out" folder with the compiled JS files
