--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,6 @@
 // See https://go.microsoft.com/fwlink/?LinkId=733558
-// for the documentation about the tasks.json format
+// for the documentation about the tasks.json format.
+// Kept as generated from https://code.visualstudio.com/api/get-started/your-first-extension
 {
   "version": "2.0.0",
   "tasks": [
