--- a/package.json
+++ b/package.json
@@ -30,7 +30,17 @@
         "command": "vscode-trace-server.stop",
         "title": "Trace Server: stop"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Trace Compass",
+      "properties": {
+        "trace-compass.traceserver.path": {
+          "type": "string",
+          "default": "/usr/bin/tracecompass-server",
+          "description": "Enter the trace server's binary path, executable included. Eg: /usr/bin/tracecompass-server."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "yarn run package",
