--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
           "type": "string",
           "default": "/usr/bin/tracecompass-server",
           "description": "Enter the trace server's binary path, executable included. Eg: /usr/bin/tracecompass-server."
+        },
+        "trace-compass.traceserver.arguments": {
+          "type": "string",
+          "description": "Enter the trace server's command arguments; requires restart. Eg: -data /server/workspace -vmargs -Dtraceserver.port=8081."
         }
       }
     }
