extension: Add trace server startup health checks
Depend on [1] to begin checking the starting trace server health. Log
the minimal errors to the console for the few negative cases added. Use
a 10000 milliseconds timeout as in [2]'s own check.

[1] https://github.com/eclipse-cdt-cloud/tsp-typescript-client
[2] https://github.com/eclipse-cdt-cloud/theia-trace-extension

Signed-off-by: Marco Miller <marco.miller@ericsson.com>

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
-    "tree-kill": "^1.2.2"
+    "tree-kill": "^1.2.2",
+    "tsp-typescript-client": "next"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
