Add Server suffix to extension configuration title
Discriminate this extension's own configuration contribution this way,
so it differs from [1]'s which has the same title otherwise. Before this
change, both configuration sections oddly showed as Trace Compass ones.

[1] https://github.com/eclipse-cdt-cloud/vscode-trace-extension

Signed-off-by: Marco Miller <marco.miller@ericsson.com>

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       }
     ],
     "configuration": {
-      "title": "Trace Compass",
+      "title": "Trace Compass (Server)",
       "properties": {
         "trace-compass.traceserver.path": {
           "type": "string",
