Prettier: Align with printWidth set to 120
Signed-off-by: Marco Miller <marco.miller@ericsson.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,11 +9,5 @@
   },
   "plugins": ["@typescript-eslint"],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "ignorePatterns": [
-    "out",
-    "dist",
-    "node_modules",
-    ".vscode-test",
-    "webpack.config.js"
-  ]
+  "ignorePatterns": ["out", "dist", "node_modules", ".vscode-test", "webpack.config.js"]
 }
