--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-  "arrowParens": "avoid",
-  "printWidth": 120,
-  "singleQuote": true
+    "arrowParens": "avoid",
+    "printWidth": 120,
+    "singleQuote": true,
+    "tabWidth": 4
 }
