--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "eslint": "^8.39.0",
         "glob": "^8.1.0",
         "mocha": "^10.2.0",
+        "prettier": "2.8.8",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
         "webpack": "^5.81.0",
