--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
             }
         ],
         "configuration": {
-            "title": "Trace Compass (Server)",
+            "title": "Trace Server",
             "properties": {
-                "trace-compass.traceserver.path": {
+                "trace-server.traceserver.path": {
                     "type": "string",
                     "default": "/usr/bin/tracecompass-server",
                     "description": "Enter the trace server's binary path, executable included. Eg: /usr/bin/tracecompass-server."
                 },
-                "trace-compass.traceserver.arguments": {
+                "trace-server.traceserver.arguments": {
                     "type": "string",
                     "description": "Enter the trace server's command arguments; requires restart. Eg: -data /server/workspace -vmargs -Dtraceserver.port=8081."
                 }
