extension: Run (compile) webpack upon 'yarn' too
Before this change, running 'yarn' didn't compile webpack yet or at that
earlier build stage.

Signed-off-by: Marco Miller <marco.miller@ericsson.com>

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         }
     },
     "scripts": {
+        "prepare": "yarn run compile",
         "vscode:prepublish": "yarn run package",
         "compile": "webpack",
         "watch": "webpack --watch",
