extension: Add vsce back as current @vscode/vsce
Beside this act of using the recently renamed package, from vsce to
@vscode/vsce, address the below issue [1].

[1]https://github.com/marco-miller/vscode-trace-server/security/dependabot/1

Signed-off-by: Marco Miller <marco.miller@ericsson.com>

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "test": "node ./out/test/runTest.js"
     },
     "dependencies": {
+        "@vscode/vsce": "^2.19.0",
         "tree-kill": "^1.2.2",
         "tsp-typescript-client": "next"
     },
