Register to vscode-trace-extension as a trace server contributor
Activate the extension on the "onStartupFinished" activation event. At
activation, register as a trace server contributor to the
vscode-trace-extension, as the default wildcard contributor by not
providing any isApplicable method implementation.

Signed-off-by: Patrick Tasse <patrick.tasse@gmail.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "type": "git",
         "url": "https://github.com/eclipse-cdt-cloud/vscode-trace-server.git"
     },
-    "activationEvents": [],
+    "activationEvents": [
+        "onStartupFinished"
+    ],
     "main": "./dist/extension.js",
     "extensionKind": [
         "workspace"
@@ -83,5 +85,8 @@
         "typescript": "^5.0.4",
         "webpack": "^5.81.0",
         "webpack-cli": "^5.0.2"
-    }
+    },
+    "extensionDependencies": [
+        "eclipse-cdt.vscode-trace-extension"
+    ]
 }
