--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
         "watch-tests": "tsc -p . -w --outDir out",
         "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
         "lint": "eslint src --ext ts",
-        "test": "node ./out/test/runTest.js"
+        "test": "node ./out/test/runTest.js",
+        "license:check" : "npx dash-licenses-wrapper  --configFile=./configs/license-check-config.json"
     },
     "dependencies": {
         "tree-kill": "^1.2.2",
