Add 3PP license check as part of PR CI
The license check can be triggered locally:
  yarn license:check

For automatic opening of IP tickets for suspicious depedencies, set an
Eclipse Foundation gitlab token as environment variable "DASH_TOKEN" and
run the alternate pacakge.json script. e.g.:
  export DASH_TOKEN="<your token>"
  yarn license:check:review

Closes #17

Signed-off-by: Marc Dumais <marc.dumais@ericsson.com>

--- a/package.json
+++ b/package.json
@@ -57,13 +57,16 @@
         "watch-tests": "tsc -p . -w --outDir out",
         "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
         "lint": "eslint src --ext ts",
-        "test": "node ./out/test/runTest.js"
+        "test": "node ./out/test/runTest.js",
+        "license:check": "npx dash-licenses-wrapper  --configFile=./configs/license-check-config.json",
+        "license:check:review": "npx dash-licenses-wrapper  --configFile=./configs/license-check-config.json --review"
     },
     "dependencies": {
         "tree-kill": "^1.2.2",
         "tsp-typescript-client": "next"
     },
     "devDependencies": {
+        "@eclipse-dash/nodejs-wrapper": "^0.0.1",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
         "@types/node": "16.x",
