--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,7 +70,7 @@ jobs:
         os: [ubuntu-latest]
         node-version: [18]
     # Only execute when the trigger was a tag (new release)
-    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'eclipse-cdt-cloud/vscode-trace-server'
 
     steps:
       - uses: actions/checkout@v4
@@ -103,7 +103,7 @@ jobs:
         os: [ubuntu-latest]
         node-version: [18]
     # Only execute when the trigger was a tag (new release)
-    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'eclipse-cdt-cloud/vscode-trace-server'
 
     steps:
       - uses: actions/checkout@v4
