--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,10 @@
 {
-    "version": "0.2.1",
+    "version": "0.2.2",
     "npmClient": "yarn",
     "command": {
         "run": {
             "stream": true
         }
     },
-    "packages": [
-        "."
-    ]
+    "packages": ["."]
 }
