--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     },
     "dependencies": {
         "tree-kill": "^1.2.2",
-        "tsp-typescript-client": "next"
+        "tsp-typescript-client": "^0.4.2"
     },
     "devDependencies": {
         "@eclipse-dash/nodejs-wrapper": "^0.0.1",
@@ -91,17 +91,17 @@
         "@types/mocha": "^10.0.1",
         "@types/node": "16.x",
         "@types/vscode": "^1.78.0",
-        "@typescript-eslint/eslint-plugin": "^5.59.1",
-        "@typescript-eslint/parser": "^5.59.1",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
         "@vscode/test-electron": "^2.3.0",
-        "@vscode/vsce": "^2.20.1",
+        "@vscode/vsce": "2.24.0",
         "eslint": "8.43.0",
         "glob": "^8.1.0",
         "lerna": "^7.0.0",
         "mocha": "^10.2.0",
         "prettier": "2.8.8",
         "ts-loader": "^9.4.2",
-        "typescript": "5.1.6",
+        "typescript": "^4.5.5",
         "webpack": "^5.81.0",
         "webpack-cli": "^5.0.2"
     },
